--- a/test.Rmd
+++ b/test.Rmd
@@ -7,19 +7,22 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(Tidyver)
+library(tidyverse)
+library(rstanarm)
 ```
 
 ```{r}
-crime_gdp %>%
-  ggplot(aes(x = gdp_id, y = crime_per_capita)) +
-  geom_point() + 
-  labs(title = "Violent crime by states in Order of asecending GDP per capita", 
-       subtitle = "More Poor States seem to have higher violence", 
-       x = "States in order of ascending GDP per capita", 
-       y = "Crime per capita") +
-    scale_x_continuous(breaks = c(1 : 50)) +
-    geom_smooth() 
-  
+a <- stan_glm(data = crimegdpfile, 
+                  formula = big_crime_per_capita ~ gdp_id, 
+                  refresh = 0, 
+                  seed = 87)
+
+print(a, digits = 4)
+```
+```{r}
+crime_gdp %>% 
+  ggplot(aes(x = gdp_id, y = big_crime_per_capita)) +
+  geom_point(alpha = .5) +
+  geom_smooth(method = "lm") 
 ```
 
